tests/incremental_delete_lazy/a.js
// @flow

import {b} from './b'; // error

b as void; // no error
